[package]
name = "urdig"
version = "0.9.2"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
description = "Grab device informations via libudev and display or parse them."
publish = true

[lib]
name = "urdig"     		# The name of the target.
path = "src/lib/mod.rs"	# The source file of the target.
test = true            	# Is tested by default.
bench = true           	# Is benchmarked by default.
edition = "2018"       	# The edition of the target.
crate-type = ["lib"]   	# The crate types to generate.

[[bin]]
name = "urdig"
path = "src/bin/urdig.rs"
test = true
bench = true

[profile.release]
lto = true				# enable link time optimization
panic = 'unwind'

[dependencies]
udev = "0.5"
clap = "2"