[package]
name = "urdig"
version = "0.9.6"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
license =" BSD-3-Clause"
homepage = "https://github.com/ph0llux/urdig"
repository = "https://github.com/ph0llux/urdig"
description = """
urdig is a tool, which can be used to display
  informations about several (udev)-devices.
 """
publish = true
readme = "README.md"
exclude = ["build/*", "doc/*", "snapcraft.yaml"]

[lib]
name = "urdig"     		# The name of the target.
path = "src/lib/mod.rs"	# The source file of the target.
test = true            	# Is tested by default.
bench = true           	# Is benchmarked by default.
edition = "2018"       	# The edition of the target.
crate-type = ["lib"]   	# The crate types to generate.

[[bin]]
name = "urdig"
path = "src/bin/urdig.rs"
test = true
bench = true

[profile.release]
lto = true				# enable link time optimization
panic = 'unwind'

[dependencies]
udev = "0.5"
clap = "2"
phollaits = "0.1"